Align text right to ensure that the icons are pushed to the margin, and do not line left with the beginning of text as observed in translatewiki.net.

--- a/skins/vector/screen.css
+++ b/skins/vector/screen.css
@@ -533,6 +533,7 @@ div#footer #footer-icons li {
 	float: left;
 	margin-left: 0.5em;
 	line-height: 2em;
+	text-align: right;
 }
 div#footer #footer-places li {
 	float: left;
